# dbas_sqlite

./: .gitattributes  .gitignore  .pubignore  CHANGELOG.md  LICENSE  README.md  SECURITY.md  analysis_options.yaml  pubspec.yaml  renovate.json
.claude/: settings.local.json
.github/: CODEOWNERS
.github/workflows/: build-test.yml  ci.yml  test.yml
android/: build.gradle  settings.gradle
example/: README.md  pubspec.yaml
example/android/: gradle.properties
example/integration_test/: autoroute_parallel_test.dart  dbas_sqlite_web_test.dart  plugin_integration_test.dart  web_pool_teardown_test.dart  web_streaming_test.dart
example/ios/: Podfile
example/lib/: complex_main.dart  main.dart
example/linux/: CMakeLists.txt
example/macos/: Podfile
example/test/: widget_test.dart
example/web/: coi-serviceworker.js  index.html  manifest.json
example/windows/: CMakeLists.txt
ios/: dbas_sqlite.podspec  dbas_sqlite_flutter.podspec
ios/Classes/: DbasSqliteFlutterPlugin.swift
ios/dbas_sqlite/: Package.swift
ios/dbas_sqlite.xcframework/: Info.plist
lib/: dbas_sqlite.dart  main.dart
lib/src/: dbas_sqlite.dart  dbas_sqlite_db.dart  (+10 more)
linux/: CMakeLists.txt  dbas_sqlite_flutter_plugin.cc  dbas_sqlite_flutter_plugin_private.h  dbas_sqlite_plugin.cc  dbas_sqlite_plugin_private.h
macos/: CMakeLists.txt  dbas_sqlite.podspec  dbas_sqlite_flutter.podspec
macos/Classes/: DbasSqliteFlutterPlugin.swift  DbasSqlitePlugin.swift
macos/Runner.xcodeproj/: project.pbxproj
macos/dbas_sqlite/: Package.swift
macos/dbas_sqlite.xcframework/: Info.plist
macos/dbas_sqlite.xcframework/macos-arm64_x86_64/Headers/: dbas_sqlite.h
macos/dbas_sqlite/dbas_sqlite.xcframework/: Info.plist
macos/libs/a64/: dbas_sqlite.dylib
macos/libs/x86/: dbas_sqlite.dylib
scripts/: codemod_v2_4_0.py
test/: dbas_sqlite_flutter_method_channel_test.dart  dbas_sqlite_flutter_test.dart  dbas_sqlite_test.dart
web/: index.html
windows/: .gitignore  CMakeLists.txt  dbas_sqlite_flutter_plugin.cpp  dbas_sqlite_flutter_plugin.h  dbas_sqlite_flutter_plugin_c_api.cpp  dbas_sqlite_plugin.cpp  dbas_sqlite_plugin.h  dbas_sqlite_plugin_c_api.cpp
(+109 files in other folders)
